# scholar-agent

./: Google Scholar API _ Scrape Google Scholar - SerpApi.txt  README.md  abstracts.md  enhacenment-report.md  intro.tex  main.py  not-found.md  prompt.md  pyproject.toml  references-with-abstracts.md  references.bib  scholar_search.py  scholar_serper_com.py  test_abstract_grabber.py  test_scholar_search.py
attic/: test_get_docs.py  test_scholar_com.py
